--- a/styles.css
+++ b/styles.css
@@ -155,10 +155,11 @@ h1.scrolled {
     display: flex;
     flex-wrap: wrap; /* Permite que los elementos se ajusten en múltiples filas */
     justify-content: space-around; /* Espaciado entre elementos */
+  
 }
 .feature-item, .trader-item, .testimonial-item, .withdraw-item {
     text-align: center;
-    width: calc(10% - 20px); /* Ajusta el ancho y deja espacio para márgenes */
+    width: calc(20% - 40px); /* Ajusta el ancho y deja espacio para márgenes */
     margin-bottom: 20px; /* Margen inferior para separación */
     min-width: 280px;
     flex: 0 0 auto;
@@ -243,25 +244,7 @@ footer {
     color: white;
 }
 
-/* Estilos Responsivos */
-@media (max-width: 768px) {
-    nav ul li {
-        display: block; /* Cambia a bloque en pantallas pequeñas */
-        margin-bottom: 10px; /* Espaciado entre elementos del menú */
-        text-align: center; /* Centra los enlaces del menú */
-    }
-    .feature-item, .trader-item, .testimonial-item, .withdraw-item {
-        width: calc(50% - 20px); /* Dos elementos por fila en pantallas pequeñas */
-        margin-bottom: 15px; /* Margen inferior para separación */
-    }
-}
 
-@media (max-width: 480px) {
-    .feature-item, .trader-item, .testimonial-item, .withdraw-item {
-        width: calc(100% - 20px); /* Un elemento por fila en pantallas muy pequeñas */
-        margin-bottom: 15px; /* Margen inferior para separación */
-    }
-}
 
 .logo{
 
@@ -519,6 +502,12 @@ footer {
     background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
     animation: rotBGimg 3.5s linear infinite;
   } */
+
+  @media (max-width: 768px) {
+    .features-list, .traders-list, .testimonials-list, .withdraws-list {
+        justify-content: center; /* Centra los ítems en pantallas pequeñas */
+        margin: 0 auto; /* Centra el contenedor si es necesario *
+    }
   
   
 
