--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,11 @@ header {
 }
 
 nav{
-    background-color: rgb(14, 12, 12); /* Negro semitransparente */
+    background-color: rgb(0, 0, 0); /* Negro semitransparente */
     height: 80px;
     width: 100%;
+    position: fixed;
+    z-index: 1000;
 }
 .enlace{
     position: absolute;
@@ -74,6 +76,13 @@ nav .ulplan .liplan a{
 }
 #check{
     display: none;
+}
+
+/* Estilo para el menú semi-transparente */
+nav.semi-transparent {
+    background-color: rgba(8, 8, 8, 0.897); /* Fondo semi-transparente */
+    opacity: 0.8; /* Reduce la opacidad */
+    backdrop-filter: blur(300px); /* Aplica el blur */
 }
 
 
