--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -31,7 +34,9 @@ header {
 }
 
 nav{
-    background-color: rgb(0, 0, 0); /* Negro semitransparente */
+    background-color: rgba(8, 8, 8, 0.277); /* Fondo semi-transparente */
+    backdrop-filter: blur(10px); /* Aplica el blur */
+    transition: background-color 0.9s ease, color 0.5s ease; /* Transición suave */
     height: 80px;
     width: 100%;
     position: fixed;
@@ -82,7 +87,7 @@ nav .ulplan .liplan a{
 nav.semi-transparent {
     background-color: rgba(8, 8, 8, 0.897); /* Fondo semi-transparente */
     opacity: 0.8; /* Reduce la opacidad */
-    backdrop-filter: blur(300px); /* Aplica el blur */
+    backdrop-filter: blur(10px); /* Aplica el blur */
 }
 
 
