--- a/styles.css
+++ b/styles.css
@@ -608,15 +608,15 @@ footer {
 }
 
 .investor-avatar.trader5 {
-    background-image: url('https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80');
+    background-image: url('perfiles/inversores/img4.jpg');
 }
 
 .investor-avatar.trader6 {
-    background-image: url('https://images.unsplash.com/photo-1552058544-f2b08422138a?auto=format&fit=crop&q=80');
+    background-image: url('');
 }
 
 .investor-avatar.trader7 {
-    background-image: url('https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&q=80');
+    background-image: url('perfiles/inversores/img5.jpg');
 }
 
 
