--- a/styles.css
+++ b/styles.css
@@ -1262,3 +1262,13 @@ font-size:10px;
     width:80%;
     padding-top:130px;
 }
+
+/* Estilos para pantallas pequeñas */
+@media (max-width: 768px) {
+    .tiker_precio {
+        position: absolute;
+        padding-left: 14%;
+        width:70%;
+        padding-top:130px;
+    }
+}
